# pico-custom-30-button-keypad

./: README.md
pico/: CMakeLists.txt  build.sh  kb_manager.c  kb_manager.uf2
